--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    height: 250px;
+    height: auto;
     }
 
 .flex-item_3 {
